2006-08-31 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated gtk+ tests to look for 2.4.x or greater.

2006-08-29 Ales Hvezda   <ahvezda@geda.seul.org>

	* lib/system-gschemrc.in: Fixed some typos in comments. 

	* gschem/include/x_print.h, gschem/include/i_vars.h,
 	gschem/include/prototype.h, gschem/scripts/print.scm,
 	gschem/src/g_funcs.c, gschem/src/g_rc.c, gschem/src/g_register.c,
 	gschem/src/x_dialog.c, gschem/src/x_print.c, gschem/src/x_window.c:
	Applied second part of patch by Peter Brett to add a new print
	dialog to gschem.  Patch#1530417.  Unfortunately x_print.c was a 
	completely by hand patch, so hopefully I got it right.  Reversed
	the "Print" and "Cancel" buttons to follow application conventions.
	Reversed "Save As" and "Cancel" buttons to follow application 
	conventions.

2006-08-24 Ales Hvezda   <ahvezda@geda.seul.org>

	* INSTALL: Updated install file a little (still somewhat dated)

	* src/o_misc.c: Fixed o_update_component to actually work correctly.
	All this time, it was just doing the wrong thing by search for
	existing components in the wrong place.  Update Component still 
	doesn't do the right thing for symversion, but that can be fixed 
	later.

	* examples/filter_1.sch: Updated all components to the latest version.

	* examples/drawing_primitives.sch: Translated schematic a little so
	it looks better on the screen.

2006-08-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/Makefile.am: Removed old VPATH, since it is no longer needed
	and it is interfering with make distcheck

2006-08-21 Ales Hvezda   <ahvezda@geda.seul.org>

        * README: Updated the README a little to be ready for the next
        release.

	* src/x_fileselect.c: Initialize preview_control to make valgrind
	happy.  Pointed out by Peter Clifton.

2006-08-19 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped version number to 20060821 in prep for the
        next gEDA/gaf release.
